# BioE-134-Final-Proj

./: .gitignore  .mcp.json  README.md  environment.yml  mcp_manifest.json  pyproject.toml
creseq_mcp/: motif.py  plotting.py  schema.py  server.py
creseq_mcp/association/: association.py
creseq_mcp/literature/: search.py
creseq_mcp/motifs/: annotate.py  enrichment.py
creseq_mcp/plots/: plots.py
creseq_mcp/processing/: association.py  counting.py  mpraflow.py
creseq_mcp/qc/: activity.py  library.py
creseq_mcp/stats/: __init__.py  library.py
demo_outputs/: active.fa  activity_table.tsv  activity_table_classified.tsv  background.fa  element_counts.tsv  manifest_with_sequences.tsv  motif_enrichment.tsv
docs/: gemini_verification.md
frontend/: agent.py  agent_stub.py  app.py  chainlit_app.py  mock_data.py  requirements.txt
scripts/: dump_mcp_manifest.py  generate_test_data.py  run_demo_pipeline.py
tests/: conftest.py  test_activity_calling.py  test_association.py  test_counting.py  test_motif.py  test_plotting.py
tests/qc/: test_library.py
tests/stats/: test_library.py
