[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creseq-mcp"
version = "0.1.0"
description = "MCP-based CRE-seq analysis toolkit"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "pydantic>=2.0",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pyjaspar>=4.0.0",
    "biopython>=1.80",
    "plotly>=5.0",
    "streamlit>=1.30",
    "anthropic>=0.40.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (real JASPAR data, end-to-end). Deselect with '-m \"not slow\"'.",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["creseq_mcp*"]
